--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.8.1
 Django==5.1.3
 django-debug-toolbar==4.4.6
+djangorestframework==3.15.2
 mysqlclient==2.2.6
 pillow==11.0.0
 python-decouple==3.8
