--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.8.1
 Django==5.1.3
 django-debug-toolbar==4.4.6
 djangorestframework==3.15.2
+drf-nested-routers==0.94.1
 mysqlclient==2.2.6
 pillow==11.0.0
 python-decouple==3.8
