--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 asgiref==3.8.1
 Django==5.1.3
 django-debug-toolbar==4.4.6
+django-extensions==3.2.3
+django-filter==24.3
 djangorestframework==3.15.2
 drf-nested-routers==0.94.1
 mysqlclient==2.2.6
